# ScraperFC

./: .coverage.MBP-van-Hizir.home.1633.XCBhHRjx  .coveragerc  .deepsource.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Example.ipynb  README.md  prek.toml  pydoclint.toml  pyproject.toml  pytest.toml  requirements.txt  ruff.toml  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: scraperfc-issue-bug-template.md  scraperfc-issue-new-feature-request-template.md  scraperfc-issue-question-template.md
.github/workflows/: main.yml  publish.yml  test.yml
.ipynb_checkpoints/: setup-checkpoint.py
ScraperFC/: Capology.py  FBRef.py  FiveThirtyEight.py  Oddsportal.py  ScraperFCExceptions.py  SofaScore.py  Sofascore.py  Transfermarkt.py  Understat.py  __init__.py  shared_functions.py
ScraperFC.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ScraperFC/ScraperFC.egg-info/: PKG-INFO  SOURCES.txt
analytics_examples/: data_viz_helpers.py  epl2022_reports_perc.pkl  player_similarity_kmeans.ipynb
analytics_examples/.ipynb_checkpoints/: player_similarity_kmeans-checkpoint.ipynb
analytics_examples/betting/: 2017-18.csv  2018-19.csv  2020-21.csv  2021-22.csv  historical_betting_data.ipynb  model.ipynb  model2.ipynb
analytics_examples/player_similarity/: epl2022_reports_per90.pkl
code/: FBRef_Tester.ipynb  dev_testing.ipynb  test.ipynb
code/.ipynb_checkpoints/: FBRef_Tester-checkpoint.ipynb  dev_testing-checkpoint.ipynb  test-checkpoint.ipynb
code/ScraperFC/: FBRef.py  FiveThirtyEight.py  SofaScore.py  Transfermarkt.py  __init__.py  shared_functions.py
code/ScraperFC.egg-info/: PKG-INFO  SOURCES.txt
code/ScraperFC/.ipynb_checkpoints/: FBRef-checkpoint.py
docs/: conf.py  index.rst
docs/_build/doctrees/: FBRef.doctree  ScraperFC.doctree  environment.pickle  index.doctree  modules.doctree  setup.doctree
docs/_build/html/: .buildinfo  FBRef.html  ScraperFC.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html
docs/_build/html/_sources/: FBRef.rst.txt  ScraperFC.rst.txt  modules.rst.txt
docs/source/: ScraperFC.rst  apidocumentation.rst  capology.rst  clubelo.rst  code_examples.rst  conf.py  contributing.rst  example.ipynb  examples.rst  exceptions.rst  fbref.rst  fbref_examples.rst  fivethirtyeight.rst  getting_started.rst  index.rst  installation.rst  shared_functions.rst  sofascore.rst  transfermarkt.rst  understat.rst  understat_examples.rst  utils.rst  year_parameter.rst
docs/source/arg_docstrings/: league.rst  year_capology.rst  year_fbref.rst  year_sofascore.rst  year_transfermarkt.rst  year_understat.rst
src/: scraperfc_exceptions.py
src/ScraperFC/: Capology.py  ClubElo.py  FBRef.py  FiveThirtyEight.py  Oddsportal.py  Sofascore.py  Transfermarkt.py  Understat.py  __init__.py  capology.py  clubelo.py  comps.yaml  fbref.py  fbref_helpers.py  fbref_match.py  fbref_scrape_match_helpers.py  fbref_scrape_stats_helpers.py  fivethirtyeight.py  oddsportal.py  original_FBRef.py  scraperfc_exceptions.py  shared_functions.py  sofascore.py  sofascore_helpers.py  sofascore_player.py  transfermarkt.py  understat.py
src/ScraperFC/utils/: __init__.py  botasaurus_get.py  botasaurus_getters.py  get_module_comps.py  get_proxy.py  load_comps.py  xpath_soup.py
test/: TestFBRef.py  dev_testing.ipynb  dev_testing_notebook.py  old_TestFBRef.py  second_tester_notebook.ipynb  second_testing_notebook.py  test_Capology.py  test_FBRef.py  test_Sofascore.py  test_Transfermarkt.py  test_capology.py  test_clubelo.py  test_fbref.py  test_fivethirtyeight.py  test_sofascore.py  test_transfermarkt.py  test_understat.py
tests/: FBRef_Tester.ipynb  TestFBRef.py  TestOddsportal.py  dev_testing.ipynb  second_tester_notebook.ipynb  shared_test_functions.py  test_fbref.py
tests/.ipynb_checkpoints/: FBRef_Tester-checkpoint.ipynb  dev_testing-checkpoint.ipynb
