[project]
# -- Metadata --------------------------------------------------------------------------------------
name = "ScraperFC"
version = "3.2.1"
description = "Package for scraping soccer data from a variety of sources."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.9"
keywords = [
    "webscraping", "scraping", "soccer", "football", "soccer data", "football data", 
    "English Premier League", "La Liga", "Bundesliga", "Serie A", "Ligue 1", "Champions League",
    "World Cup"
]
authors = [
    {email = "osmour043@gmail.com"},
    {name = "Owen Seymour"}
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]
dependencies = [
    "botasaurus>=4.0.76",
    "bs4>=0.0.2",
    "cloudscraper>=1.2.71",
    "datetime>=5.5",
    "lxml>=5.3.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "selenium>=4.28.1",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-instafail>=0.5.0",
]
docs = [
    "furo>=2024.8.6",
    "myst-nb>=1.1.2",
    "sphinx>=7.4.7",
]
build = [
    "build>=1.2.2.post1",
    "setuptools>=75.8.0",
    "wheel>=0.45.1",
]
publish = [
    "publish>=0.3.6",
]
dev = [
    "marimo>=0.10.19",
    "tox>=4.24.1",
]
typecheck = [
    "mypy>=1.14.1",
    "pandas-stubs>=2.2.2.240807",
    "types-beautifulsoup4>=4.12.0.20241020",
    "types-openpyxl>=3.1.5.20241225",
    "types-python-dateutil>=2.9.0.20241206",
    "types-requests>=2.32.0.20241016",
    "types-tqdm>=4.67.0.20241221",
]

[project.urls]
repository = "https://github.com/oseymour/ScraperFC/"
documentation = "https://scraperfc.readthedocs.io/en/latest/"

# -- Build system ----------------------------------------------------------------------------------
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# -- Pytest and pytest coverage --------------------------------------------------------------------
[tool.pytest]
norecursedirs = ["docs", "*.egg-info", ".git", ".tox"]

[tool.coverage.run]
branch = true
omit = ["*oddsportal.py"]

[tool.coverage.report]
show_missing = true

# -- Linting ---------------------------------------------------------------------------------------
[tool.ruff]
exclude = ["*dev_testing.ipynb", "*second_tester_notebook.ipynb"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# -- Typechecking ----------------------------------------------------------------------------------
[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

# -- Tox environments ------------------------------------------------------------------------------
[tool.tox]
legacy_tox_ini = """
    [tox]
    isolated_build = true
    envlist = py39, py310, py311, py312

    [testenv]
    extras = test
    commands = 
        python -m pip list
        pytest ./test/ --cov ScraperFC --durations 20 --cov-report xml:coverage.xml --cov-report term

    [testenv:test-capology]
    extras = test
    allowlist_externals = uv
    install_command = uv pip install
    commands = 
        pip list
        pytest ./test/test_capology.py --cov ScraperFC --cov-report term --cov-report xml:coverage_capology.xml

    [testenv:test-clubelo]
    extras = test
    allowlist_externals = uv
    install_command = uv pip install
    commands = 
        pip list
        pytest ./test/test_clubelo.py --cov ScraperFC --cov-report term --cov-report xml:coverage_clubelo.xml

    [testenv:test-fbref]
    extras = test
    allowlist_externals = uv
    install_command = uv pip install
    commands = 
        pip list
        pytest ./test/test_fbref.py --cov ScraperFC --cov-report term --cov-report xml:coverage_fbref.xml

    [testenv:test-sofascore]
    extras = test
    allowlist_externals = uv
    install_command = uv pip install
    commands = 
        pip list
        pytest ./test/test_sofascore.py --cov ScraperFC --cov-report term --cov-report xml:coverage_sofascore.xml

    [testenv:test-transfermarkt]
    extras = test
    allowlist_externals = uv
    install_command = uv pip install
    commands = 
        pip list
        pytest ./test/test_transfermarkt.py --cov ScraperFC --cov-report term --cov-report xml:coverage_transfermarkt.xml

    [testenv:test-understat]
    extras = test
    allowlist_externals = uv
    install_command = uv pip install
    commands = 
        pip list
        pytest ./test/test_understat.py --cov ScraperFC --cov-report term --cov-report xml:coverage_understat.xml

    [testenv:docs]
    extras = docs
    commands = sphinx-build -nWEa --keep-going -b html ./docs/source/ ./docs/build/

    [testenv:build]
    skip_install = true
    deps = build
    commands = python -m build

    [testenv:lint]
    skip_install = true
    deps = ruff
    commands = ruff check --show-files

    [testenv:typecheck]
    extras = typecheck
    commands = python -m mypy ./src/
"""
