[metadata]
name = ScraperFC
version = 2.9.2
url = https://github.com/oseymour/ScraperFC
author = Owen Seymour
author_email = "Owen Seymour" osmour043@gmail.com
description = "Package for scraping soccer data from a variety of sources."
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
license_files = LICENSE
classifiers = 
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = 
    selenium
    pandas
    numpy
    datetime
    ipython
    requests
    bs4
    lxml
    tqdm

[options.packages.find]
where = src
exclude = test*

[tool:pytest]
testpaths = test

[coverage:run]
branch = True

[coverage:report]
show_missing = True
# skip_covered = True # don't print out files with 100% coverage